<resources>

    <string name="app_name">SM62</string>
    <string name="title_name">SM62串口模块测试 V1.0.3.20170509</string>
    
    <string name="label_baudrate">通信波特率:</string>
    <string name="label_devNodename">串口设备节点:</string>
    <string name="edit_baudrate">57600</string>
    <string name="edit_devNodename">/dev/ttyMT2</string>
    
    
    <string name="text_result">结果</string>
	<string name="btn_up">模块上电</string>
	<string name="btn_devver">设备版本</string>
	<string name="btn_devcount">模块容量</string>
	<string name="btn_detectfinger">探测手指</string>
	<string name="btn_getImg">获取图像</string>
	<string name="btn_enroll">登记模板</string>
	<string name="btn_search">指纹搜索</string>	
	<string name="btn_enroll_2">登记模板2</string>	
	<string name="btn_upTemplate">上传模板2</string>	
	<string name="btn_downTemplate">下载模板2</string>	
	<string name="btn_delTemplate">删除模板2</string>	
	<string name="btn_clearTemplate">清空模板</string>	
	<string name="btn_getTemplate">获取模板</string>	
	<string name="btn_getFeature">获取特征</string>	
	<string name="btn_setBps">修改波特率</string>

</resources>
