<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <!-- 标题 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/title_name"
            android:textColor="#00f"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dip"
        android:orientation="vertical"
        android:padding="0dip" >

        <ImageView
            android:id="@+id/image_show"
        	android:layout_width="346dp"
            android:layout_height="196dp"
            android:background="@drawable/finger256_304"
            android:contentDescription="" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/layout_dir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dip"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="0dip"
        android:stretchColumns="1" >
 	<TableRow>

            <TextView
                android:id="@+id/label_devNodename"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_devNodename" />

            <EditText
                android:id="@+id/edit_devNodename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/edit_devNodename" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/label_baudrate"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_baudrate" />

            <EditText
                android:id="@+id/edit_baudrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/edit_baudrate" />
        </TableRow>

       

    </TableLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickUp"
                android:text="@string/btn_up" />

            <Button
                android:id="@+id/btn_devver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickGetDevVer"
                android:text="@string/btn_devver" />
            <Button
                android:id="@+id/btn_devcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickDevCount"
                android:text="@string/btn_devcount" />
            
            <Button
                android:id="@+id/btn_detectfinger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickDetectFinger"
                android:text="@string/btn_detectfinger" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_getImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickGetImg"
                android:text="@string/btn_getImg" />

            <Button
                android:id="@+id/btn_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickEnroll"
                android:text="@string/btn_enroll" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickSearch"
                android:text="@string/btn_search" />

            <Button
                android:id="@+id/btn_clearTemplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickClearTemplate"
                android:text="@string/btn_clearTemplate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_enroll_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickEnroll2"
                android:text="@string/btn_enroll_2" />

            <Button
                android:id="@+id/btn_upTemplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickUpTemplate"
                android:text="@string/btn_upTemplate" />

            <Button
                android:id="@+id/btn_downTemplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickDownTemplate"
                android:text="@string/btn_downTemplate" />

            <Button
                android:id="@+id/btn_delTemplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickDelTemplate"
                android:text="@string/btn_delTemplate" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dip"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_GetTemplate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickGetTemplate"
                android:text="@string/btn_getTemplate" />

            <Button
                android:id="@+id/btn_GetFeature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickGetFeature"
                android:text="@string/btn_getFeature" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>